# glance.tailscale

./: Dockerfile  README.md  pyproject.toml  web.py
.github/workflows/: ghcr.yml
templates/: device.jinja
