[project]
name = "glance-tailscale"
version = "0.1.0"
description = "Extension for glance to display tailscale devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "quart>=0.20.0",
    "quart-schema>=0.21.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.1",
]
